--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,9 @@
   },
   "extra": {
     "viswoole": {
-      "services": []
+      "services": [
+        "\\ViSwoole\\Cache\\CacheService"
+      ]
     }
   }
 }
