依赖配置文件，复制到项目

--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,9 @@
     "viswoole": {
       "services": [
         "\\ViSwoole\\Cache\\CacheService"
+      ],
+      "configs": [
+        "config"
       ]
     }
   }
